# seq2seq

./: .gitignore  CLAUDE.md  FIXES.md  README.md  README_UPDATED.md  RESULTS_ANALYSIS.md  SOLUTIONS.md  SUMMARY.md  TRANSLATION_TABLE_README.md  data.py  debug_data.py  debug_data_loading.py  demo_translation.py  demo_translation_fixed.py  en_tokenizer.json  final_run.py  fr_tokenizer.json  improved_translation.py  inspect_model.py  main.py  main_hybrid.py  main_simplified.py  model.py  prepare_tokenizers.py  pyproject.toml  pytest.ini  retrain_model.py  retrain_small.py  run_mini.py  run_minimal.py  run_seq2seq.py  run_tests.py  simple_translate.py  start.md  test_translation.py  test_translation_exact.py  test_translation_fixed.py  tokenizer_test.py  train.py  train_and_visualize.py  (+6 more)
docs/: API.md  CONTRIBUTING.md  README.md  USAGE.md
models/: model_attn.pt  model_attn_custom.pt  model_attn_final.pt  model_no_attn.pt  model_no_attn_custom.pt  model_no_attn_final.pt
seq2seq/: __init__.py  __main__.py
seq2seq/core/: __init__.py  attention.py  decoder.py  encoder.py  loss.py  seq2seq.py
seq2seq/data/: __init__.py  collate.py  dataset.py  loader.py  sampler.py
seq2seq/models/: __init__.py
seq2seq/scripts/: inspect_model.py  prepare_cli.py  train_cli.py  translate_cli.py
seq2seq/training/: __init__.py  evaluator.py  trainer.py  visualization.py
seq2seq/utils/: __init__.py  metrics.py  tokenizer.py  translation.py
tests/: test_data.py  test_integration.py  test_model.py  test_train.py  test_translation_chart.py  test_utils.py
(+4 files in other folders)
