[project]
name = "seq2seq"
version = "0.1.0"
description = "Sequence-to-sequence model for machine translation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Seq2Seq Team"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "datasets>=2.13.0",
    "tokenizers>=0.13.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.0.270",
]

[project.scripts]
seq2seq-train = "seq2seq.scripts.train_cli:main"
seq2seq-translate = "seq2seq.scripts.translate_cli:main"
seq2seq-prepare = "seq2seq.scripts.prepare_cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
